--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
                 <div id="search-history"></div>
             </div>
             <div class="col-9">
-                <div class="border border-secondary p-3" id="current-forecast">
-                    <h2 class="mt-3">5-Day Forecast:</h2>
-                    <div class="d-flex justify-content-between" id="forecast">
-                        <div class="future bg-dark text-white p-2"></div>
-                        <div class="future bg-dark text-white p-2"></div>
-                        <div class="future bg-dark text-white p-2"></div>
-                        <div class="future bg-dark text-white p-2"></div>
-                        <div class="future bg-dark text-white p-2"></div>
-                    </div>
+                <div class="border border-secondary p-3" id="current-forecast"></div>
+                <h2 class="mt-3">5-Day Forecast:</h2>
+                <div class="d-flex justify-content-between" id="forecast">
+                    <div class="future bg-dark text-white p-2"></div>
+                    <div class="future bg-dark text-white p-2"></div>
+                    <div class="future bg-dark text-white p-2"></div>
+                    <div class="future bg-dark text-white p-2"></div>
+                    <div class="future bg-dark text-white p-2"></div>
                 </div>
             </div>
         </div>
